--- a/app.json
+++ b/app.json
@@ -1,7 +1,13 @@
 {
   "pages": [
+    "pages/wxs/wxs",
+    "pages/wxml/wxml",
+    "pages/scroll/scroll",
+    "pages/input/input",
+    "pages/image/image",
+    "pages/view/view",
     "pages/home/home",
     "pages/about/about"
-   
-  ]
+  ],
+  "sitemapLocation": "sitemap3.json"
 }
